--- a/install/templates/sampling/routes/profile/detail.css
+++ b/install/templates/sampling/routes/profile/detail.css
@@ -3,6 +3,11 @@ h1 {
    font-size: 1.7rem;
 }
 
-button { padding: 10px 20px; }
+button {
+   padding: 10px 20px;
+}
 
-button[routed] { background: wheat; font-weight: bolder;  }
+button.routed {
+   background: wheat;
+   font-weight: bolder;
+}
