--- a/install/templates/sampling/assets/default.css
+++ b/install/templates/sampling/assets/default.css
@@ -1,5 +1,91 @@
 @import url('https://fonts.cdnfonts.com/css/share-tech');
 
-body, h1, h2, h3, h4, h5, h6 {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+button,
+textarea,
+input,
+select {
    font-family: agave !important
+}
+
+@media (prefers-color-scheme: dark) {
+   body {
+      background-color: #333;
+      color: #EEE;
+   }
+
+   a {
+      color: wheat
+   }
+
+   a:hover {
+      color: yellow
+   }
+
+   button {
+      background-color: #AAA;
+      border-width: 1px;
+      padding: 10px 5px;
+   }
+
+   input,
+   textarea {
+      color: #EEE;
+      background-color: #444;
+      border-color: #555;
+      border-style: solid;
+      border-width: 1px;
+      outline: none;
+   }
+
+   input:focus {
+      border-color: #AAA;
+      outline: none;
+   }
+}
+
+input.Hello,
+[bind='value'],
+[own^='Sub'] {
+   width: 50px;
+}
+
+label.Hello {
+   margin-bottom: 20px;
+}
+
+label.Hello code {
+   font-size: 12px;
+   color: silver;
+}
+
+button.Detail {
+   padding: 10px;
+   margin: 10px;
+   cursor: pointer;
+   background-color: #ccc;
+   border: 1px solid #000;
+   transition: margin-top 0.2s ease-in-out, margin-bottom 0.2s ease-in-out;
+}
+
+button.Detail:hover {
+   background-color: #ddd;
+}
+
+button.Detail:active {
+   margin-top: 5px;
+   margin-bottom: 5px;
+}
+
+
+button.Detail:active {
+   color: white;
+   background-color: #777;
+   transform: translate(2px, 2px);
 }
