--- a/installation/templates/sampling/builds/clock.html
+++ b/installation/templates/sampling/builds/clock.html
@@ -13,18 +13,17 @@
       <meta name='description' content='Home page' />
       <meta name='theme-color' content='#333' />
       <meta name='title' content='Welcome' />
-   <script src='/mnt/b/Repositorios/reactful/experiments/builds/shared.js'></script>
-      <script type='module' src='/mnt/b/Repositorios/reactful/experiments/builds/bundle.js'></script></head>
+   <script src='/mnt/b/Repositorios/reactful/experiment/builds/shared.js'></script>
+      <script type='module' src='/mnt/b/Repositorios/reactful/experiment/builds/bundle.js'></script></head>
    <body>
       <div id='root'>
-         <h1 tag="h1" uid="6" class="TimeZone">World Clock</h1>
-         <h2 tag="h2" uid="8" class="TimeZone">Europe/Amistedan timezone</h2>
-         <h3 style="color:yellow" tag="h3" uid="10" class="TimeZone"> <!-- -->2024-2-20<!-- -->
-            <!-- -->17:11:50<!-- --> </h3>
-         <code tag="code" uid="15" own="InnerAsyncComponent" class="InnerAsyncComponent">
-            <mark tag="mark" uid="17" class="InnerAsyncComponent">I&#x27;m a inner subcomponent
-               !!!</mark>
-         </code>
+         <div tag="TimeZone" uid="3" own="default$" fallback="[object Object]" class="default"
+            retry="/clock" hidden>
+            <h1>500</h1>
+            <ul>
+               <li>Was there a typo in the url or port?</li>
+            </ul>
+         </div>
       </div>
    </body>
 </html>
